{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 244,
  "lineage": "d0e773d5-db6a-bd13-c1ab-a609167abf95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346032389979:loadbalancer/app/ecommerce-alb/d5c4fdfcff56146e",
            "arn_suffix": "app/ecommerce-alb/d5c4fdfcff56146e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-alb-99572369.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:346032389979:loadbalancer/app/ecommerce-alb/d5c4fdfcff56146e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d395ad4b283cf24a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-040a7b8457b724e3f"
              },
              {
                "subnet_id": "subnet-0d8512cf106837418"
              }
            ],
            "subnets": [
              "subnet-040a7b8457b724e3f",
              "subnet-0d8512cf106837418"
            ],
            "tags": {
              "Name": "ecommerce-alb",
              "Project": "ecommerce-aws"
            },
            "tags_all": {
              "Name": "ecommerce-alb",
              "Project": "ecommerce-aws"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346032389979:listener/app/ecommerce-alb/d5c4fdfcff56146e/c928be177d1f6c63",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346032389979:targetgroup/ecommerce-tg-v2/1067ee18ef899867",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346032389979:listener/app/ecommerce-alb/d5c4fdfcff56146e/c928be177d1f6c63",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:346032389979:loadbalancer/app/ecommerce-alb/d5c4fdfcff56146e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.default",
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346032389979:targetgroup/ecommerce-tg-v2/1067ee18ef899867",
            "arn_suffix": "targetgroup/ecommerce-tg-v2/1067ee18ef899867",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-400",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346032389979:targetgroup/ecommerce-tg-v2/1067ee18ef899867",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecommerce-tg-v2",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:security-group/sg-0b7bd53ee6a9a28cc",
            "description": "Allow traffic from the ALB to the Fargate containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7bd53ee6a9a28cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from within the VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d395ad4b283cf24a"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecommerce-tasks-sg",
            "name_prefix": "",
            "owner_id": "346032389979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-tasks-sg"
            },
            "tags_all": {
              "Name": "ecommerce-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:security-group/sg-0d395ad4b283cf24a",
            "description": "Allow HTTP inbound traffic to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d395ad4b283cf24a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecommerce-lb-sg",
            "name_prefix": "",
            "owner_id": "346032389979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-lb-sg"
            },
            "tags_all": {
              "Name": "ecommerce-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:network-acl/acl-0c2a698fae4df3c87",
            "default_network_acl_id": "acl-0c2a698fae4df3c87",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c2a698fae4df3c87",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "346032389979",
            "subnet_ids": [
              "subnet-040a7b8457b724e3f",
              "subnet-06b49d04d5ca9bf4e",
              "subnet-0d1d81b1bf2b5d76a",
              "subnet-0d8512cf106837418"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-default",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-default",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:route-table/rtb-05fa3401e70aab12a",
            "default_route_table_id": "rtb-05fa3401e70aab12a",
            "id": "rtb-05fa3401e70aab12a",
            "owner_id": "346032389979",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-default",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-default",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:security-group/sg-0f67fcd0b2e4f8b70",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f67fcd0b2e4f8b70",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "346032389979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-default",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-default",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:internet-gateway/igw-0f7cf72deadfd638c",
            "id": "igw-0f7cf72deadfd638c",
            "owner_id": "346032389979",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f7cf72deadfd638c",
            "id": "r-rtb-011db4692985349401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011db469298534940",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:route-table/rtb-08aa2772e978500a6",
            "id": "rtb-08aa2772e978500a6",
            "owner_id": "346032389979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1a",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1a",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:route-table/rtb-0b1e5cde98eabb7d1",
            "id": "rtb-0b1e5cde98eabb7d1",
            "owner_id": "346032389979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1b",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1b",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:route-table/rtb-011db469298534940",
            "id": "rtb-011db469298534940",
            "owner_id": "346032389979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-public",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-public",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2f1db2aec45e97f",
            "route_table_id": "rtb-08aa2772e978500a6",
            "subnet_id": "subnet-0d1d81b1bf2b5d76a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ee9e34c4cd7b0a9",
            "route_table_id": "rtb-0b1e5cde98eabb7d1",
            "subnet_id": "subnet-06b49d04d5ca9bf4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa756908a27a478a",
            "route_table_id": "rtb-011db469298534940",
            "subnet_id": "subnet-040a7b8457b724e3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fae023014c8b3f5",
            "route_table_id": "rtb-011db469298534940",
            "subnet_id": "subnet-0d8512cf106837418"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:subnet/subnet-0d1d81b1bf2b5d76a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1d81b1bf2b5d76a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346032389979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1a",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1a",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:subnet/subnet-06b49d04d5ca9bf4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b49d04d5ca9bf4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346032389979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1b",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-private-us-east-1b",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:subnet/subnet-040a7b8457b724e3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040a7b8457b724e3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346032389979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-public-us-east-1a",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-public-us-east-1a",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:subnet/subnet-0d8512cf106837418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8512cf106837418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346032389979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-public-us-east-1b",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc-public-us-east-1b",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ab2a2fec27a36f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346032389979:vpc/vpc-0ab2a2fec27a36f34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2a698fae4df3c87",
            "default_route_table_id": "rtb-05fa3401e70aab12a",
            "default_security_group_id": "sg-0f67fcd0b2e4f8b70",
            "dhcp_options_id": "dopt-0c6639258c43d3a6c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab2a2fec27a36f34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05fa3401e70aab12a",
            "owner_id": "346032389979",
            "tags": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce-aws",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}